# dk2nu-numi-flux

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Weight.cc  Weight.h  build.sh  build_sl7_sourceme.sh  config.toml  flux_ana.py  flux_file_ana.py  helper.h  makeFluxHistograms.cc  pdgid.h  pyproject.toml  requirements.txt  root_declarations.py  setup.sh  setup_dev.sh  setup_sl7.sh  spectra.cc  spectra.h  spectra_definitions.py  vecops.cc  vecops.h
file_lists/: default_files.txt  default_files_RHC.txt  g3Chase_files.txt  g3Chase_files_RHC.txt  kaon_xsec_files.txt  updated_g4_filelist_250M_POT_FHC.txt  updated_g4_filelist_250M_POT_RHC.txt
