[tool.poetry]
name = "dk2nu-ana"
version = "0.1.0"
description = "Use ROOT and dk2nu to study the NuMI flux."
authors = ["Tony Wood <apwood@uh.edu>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
